Adds a quick check to see if AMBER can run a minimization

--- a/mol2-to-prmtop.ipynb
+++ b/mol2-to-prmtop.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T22:23:19.559698Z",
      "start_time": "2018-02-05T22:23:19.518707Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -48,7 +49,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:02:10.475471Z",
      "start_time": "2018-02-05T23:02:10.463272Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -81,7 +83,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:02:10.758630Z",
      "start_time": "2018-02-05T23:02:10.754237Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -175,7 +178,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:02:13.179910Z",
      "start_time": "2018-02-05T23:02:13.137461Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -208,7 +212,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:02:13.311593Z",
      "start_time": "2018-02-05T23:02:13.298366Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -251,7 +256,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T22:57:57.071368Z",
      "start_time": "2018-02-05T22:57:56.930215Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -416,7 +422,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:10:45.009772Z",
      "start_time": "2018-02-05T23:10:42.944283Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -550,7 +557,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-05T23:34:47.270187Z",
      "start_time": "2018-02-05T23:34:47.263772Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -646,8 +654,290 @@
     "A few observations...\n",
     "\n",
     "- The generated `prmtop` file is huge (1.1G)\n",
+    "- Running a simulation with the generated `inpcrd` and `prmtop` in `pmemd` results in a seg fault:\n",
+    "\n",
+    "```\n",
+    "Program received signal SIGSEGV: Segmentation fault - invalid memory reference.\n",
+    "\n",
+    "Backtrace for this error:\n",
+    "#0  0x7FA5409FB6F7\n",
+    "#1  0x7FA5409FBD3E\n",
+    "#2  0x7FA53FF0026F\n",
+    "#3  0x49CFDE in __cit_mod_MOD_setup_crd_idx_tbl\n",
+    "#4  0x49D108 in __cit_mod_MOD_setup_cit\n",
+    "#5  0x479A48 in __pme_direct_mod_MOD_pme_list\n",
+    "#6  0x4913F2 in __pme_force_mod_MOD_pme_force\n",
+    "#7  0x4BD998 in __runmin_mod_MOD_runmin_master\n",
+    "#8  0x4E315B in MAIN__ at pmemd.F90:?\n",
+    "```\n",
+    "\n",
     "- There are no charges on the waters (because they don't have a formal charge, set above)\n",
-    "- The generated `mol2` file has numeric atom types"
+    "- The generated `mol2` file has numeric atom types\n",
+    "- Chimera crashes when trying to read the `inpcrd` and `prmtop` with:\n",
+    "\n",
+    "```\n",
+    "Error: unexpected EOF in readln\n",
+    "Error looking for %FLAG RESIDUE_LABEL\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T00:18:41.086296Z",
+     "start_time": "2018-02-06T00:18:41.073848Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def check_amber_crash(topology, coordinates, input_file, output_file, restart_file, executable, path):\n",
+    "    \"\"\"\n",
+    "    Quickly checks to see if an AMBER minimization can succeed.    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    topology : PDBFixer topology (probably others work, as well)\n",
+    "        Simulation topology\n",
+    "    coordinates : PDBFixer coordinates (others will work)\n",
+    "        Coordinates of the atoms in the topology\n",
+    "    output_file : str\n",
+    "        Output of the minimization\n",
+    "    restart_file : str\n",
+    "        Simulation restart final\n",
+    "    executable : str\n",
+    "        AMBER executable (sander is safe), must be in path\n",
+    "    path : str\n",
+    "        Directory of files\n",
+    "    \"\"\"\n",
+    "\n",
+    "    minimization = \\\n",
+    "'''\n",
+    "&cntrl\n",
+    "    imin   = 1,\n",
+    "    maxcyc = 500,\n",
+    "    ncyc   = 250,\n",
+    "    ntb    = 0,\n",
+    "    igb    = 0,\n",
+    "    cut    = 12\n",
+    "/     \n",
+    "'''\n",
+    "    with open(path + input_file, 'w') as file:\n",
+    "        file.write(minimization)\n",
+    "    print(\"{4} -O -p {0} -c {1} -ref {1} -i {2} -o {3} -r {5}\".format(topology, \n",
+    "                            coordinates,\n",
+    "                            input_file,\n",
+    "                            output_file,\n",
+    "                            executable,\n",
+    "                            restart_file))\n",
+    "\n",
+    "    sp.call(\"{4} -O -p {0} -c {1} -ref {1} -i {2} -o {3} -r {5}\".format(topology, \n",
+    "                            coordinates,\n",
+    "                            input_file,\n",
+    "                            output_file,\n",
+    "                            executable,\n",
+    "                            restart_file), cwd=path, shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T00:19:59.110979Z",
+     "start_time": "2018-02-06T00:19:59.106249Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def grep_output(output_file, path):\n",
+    "    p = sp.Popen(['cat', output_file], cwd=path, stdout=sp.PIPE)\n",
+    "    for line in p.stdout:\n",
+    "        print(line.decode(\"utf-8\").strip(),)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T00:21:30.019183Z",
+     "start_time": "2018-02-06T00:20:10.818496Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sander -O -p solvated_smirnoff.prmtop -c solvated_smirnoff.inpcrd -ref solvated_smirnoff.inpcrd -i solvated_smirnoff.in -o solvated_smirnoff.out -r solvated_smirnoff.rst\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_amber_crash('solvated_smirnoff.prmtop', 'solvated_smirnoff.inpcrd', 'solvated_smirnoff.in', \n",
+    "               'solvated_smirnoff.out', 'solvated_smirnoff.rst', 'sander', 'generated/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T00:21:30.057828Z",
+     "start_time": "2018-02-06T00:21:30.021218Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-------------------------------------------------------\n",
+      "Amber 16 SANDER                              2016\n",
+      "-------------------------------------------------------\n",
+      "\n",
+      "| Run on 02/05/2018 at 16:20:10\n",
+      "\n",
+      "|   Executable path: sander\n",
+      "| Working directory: /home/dslochower/hgst-3tb-data/projects/smirnoff-host-guest/generated\n",
+      "|          Hostname: warthog\n",
+      "\n",
+      "[-O]verwriting output\n",
+      "\n",
+      "File Assignments:\n",
+      "|  MDIN: solvated_smirnoff.in\n",
+      "| MDOUT: solvated_smirnoff.out\n",
+      "|INPCRD: solvated_smirnoff.inpcrd\n",
+      "|  PARM: solvated_smirnoff.prmtop\n",
+      "|RESTRT: solvated_smirnoff.rst\n",
+      "|  REFC: solvated_smirnoff.inpcrd\n",
+      "| MDVEL: mdvel\n",
+      "| MDFRC: mdfrc\n",
+      "|  MDEN: mden\n",
+      "| MDCRD: mdcrd\n",
+      "|MDINFO: mdinfo\n",
+      "|  MTMD: mtmd\n",
+      "|INPDIP: inpdip\n",
+      "|RSTDIP: rstdip\n",
+      "|INPTRA: inptraj\n",
+      "\n",
+      "\n",
+      "Here is the input file:\n",
+      "\n",
+      "\n",
+      "&cntrl\n",
+      "imin   = 1,\n",
+      "maxcyc = 500,\n",
+      "ncyc   = 250,\n",
+      "ntb    = 0,\n",
+      "igb    = 0,\n",
+      "cut    = 12\n",
+      "/\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "1.  RESOURCE   USE:\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "| Flags:\n",
+      "|    NONPERIODIC   ntb=0 and igb=0: Setting up nonperiodic simulation\n",
+      "|Largest sphere to fit in unit cell has radius =    48.559\n",
+      "| New format PARM file being parsed.\n",
+      "| Version =    1.000 Date = 02/05/18 Time = 15:13:40\n",
+      "NATOM  =    6804 NTYPES =    6804 NBONH =    4495 MBONA  =      93\n",
+      "NTHETH =    2381 MTHETA =     137 NPHIH =     445 MPHIA  =     360\n",
+      "NHPARM =       0 NPARM  =       0 NNB   =    9804 NRES   =    2231\n",
+      "NBONA  =      93 NTHETA =     137 NPHIA =     360 NUMBND =      10\n",
+      "NUMANG =       7 NPTRA  =     478 NATYP =       1 NPHB   =       0\n",
+      "IFBOX  =       1 NMXRS  =      21 IFCAP =       0 NEXTRA =       0\n",
+      "NCOPY  =       0\n",
+      "\n",
+      "\n",
+      "|     Memory Use     Allocated\n",
+      "|     Real            46825809\n",
+      "|     Hollerith          22645\n",
+      "|     Integer         46504960\n",
+      "|     Max Pairs        3919104\n",
+      "|     nblistReal         81648\n",
+      "|     nblist Int       1690092\n",
+      "|       Total           570123 kbytes\n",
+      "\n",
+      "| Note: 1-4 EEL scale factors are being read from the topology file.\n",
+      "\n",
+      "| Note: 1-4 VDW scale factors are being read from the topology file.\n",
+      "| Duplicated    0 dihedrals\n",
+      "| Duplicated    0 dihedrals\n",
+      "\n",
+      "BOX TYPE: RECTILINEAR\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "2.  CONTROL  DATA  FOR  THE  RUN\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "General flags:\n",
+      "imin    =       1, nmropt  =       0\n",
+      "\n",
+      "Nature and format of input:\n",
+      "ntx     =       1, irest   =       0, ntrx    =       1\n",
+      "\n",
+      "Nature and format of output:\n",
+      "ntxo    =       2, ntpr    =      50, ntrx    =       1, ntwr    =       1\n",
+      "iwrap   =       0, ntwx    =       0, ntwv    =       0, ntwe    =       0\n",
+      "ioutfm  =       1, ntwprt  =       0, idecomp =       0, rbornstat=      0\n",
+      "\n",
+      "Potential function:\n",
+      "ntf     =       1, ntb     =       0, igb     =       0, nsnb    =      25\n",
+      "ipol    =       0, gbsa    =       0, iesp    =       0\n",
+      "dielc   =   1.00000, cut     =  12.00000, intdiel =   1.00000\n",
+      "\n",
+      "Frozen or restrained atoms:\n",
+      "ibelly  =       0, ntr     =       0\n",
+      "\n",
+      "Energy minimization:\n",
+      "maxcyc  =     500, ncyc    =     250, ntmin   =       1\n",
+      "dx0     =   0.01000, drms    =   0.00010\n",
+      "|  INFO: Old style inpcrd file read\n",
+      "\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "3.  ATOMIC COORDINATES AND VELOCITIES\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "\n",
+      "begin time read from input coords =     0.000 ps\n",
+      "\n",
+      "Number of triangulated 3-point waters found:        0\n",
+      "|    Read coords time           0.01 ( 0.01% of Total)\n",
+      "|                Build the list             0.95 (100.0% of List )\n",
+      "|                Other                      0.00 ( 0.05% of List )\n",
+      "|             List time                  0.95 ( 1.80% of Nonbo)\n",
+      "|                   Short_ene time            51.80 (100.0% of Direc)\n",
+      "|                   Other                      0.04 ( 0.08% of Direc)\n",
+      "|                Direct Ewald time         51.84 (100.0% of Ewald)\n",
+      "|                Other                      0.02 ( 0.03% of Ewald)\n",
+      "|             Ewald time                51.85 (98.20% of Nonbo)\n",
+      "|          Nonbond force             52.81 (99.53% of Force)\n",
+      "|          Bond/Angle/Dihedral        0.24 ( 0.46% of Force)\n",
+      "|          Other                      0.00 ( 0.01% of Force)\n",
+      "|       Force time                53.05 (100.0% of Runmd)\n",
+      "|    Runmd Time                53.05 (67.04% of Total)\n",
+      "|    Other                     26.08 (32.95% of Total)\n",
+      "| Total time                79.14 (100.0% of ALL  )\n",
+      "\n",
+      "| Number of list builds   :         21\n",
+      "\n",
+      "| Highest rstack allocated:       2220\n",
+      "| Highest istack allocated:        444\n"
+     ]
+    }
+   ],
+   "source": [
+    "grep_output('solvated_smirnoff.out', path='generated/')"
    ]
   },
   {
