Runs a test simulation in OpenMM to confirm the `System` is okay

--- a/mol2-to-prmtop.ipynb
+++ b/mol2-to-prmtop.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T22:23:19.559698Z",
-     "start_time": "2018-02-05T22:23:19.518707Z"
-    },
-    "collapsed": true
+     "end_time": "2018-02-06T03:32:45.589520Z",
+     "start_time": "2018-02-06T03:32:44.692872Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -444,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 295,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-05T23:10:47.261512Z",
-     "start_time": "2018-02-05T23:10:45.951917Z"
+     "end_time": "2018-02-06T02:49:31.693402Z",
+     "start_time": "2018-02-06T02:49:30.514302Z"
     }
    },
    "outputs": [
@@ -473,7 +472,158 @@
     "simulation.minimizeEnergy()\n",
     "state = simulation.context.getState(getEnergy=True, getPositions=True)\n",
     "energy = state.getPotentialEnergy() / unit.kilocalories_per_mole\n",
-    "print(\"Energy after minimization (kcal/mol): %.2g\" % energy)"
+    "print(\"Energy after minimization (kcal/mol): %.2g\" % energy)\n",
+    "minimized_coordinates = state.getPositions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'd also like to run a little MD, to see if the simulation is stable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T03:32:53.881935Z",
+     "start_time": "2018-02-06T03:32:53.879417Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import mdtraj\n",
+    "from mdtraj.reporters import NetCDFReporter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T03:03:26.899802Z",
+     "start_time": "2018-02-06T03:03:26.885458Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'minimized_coordinates' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-4267ed59baba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m md = dict(\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mcoordinates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mminimized_coordinates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mintegrator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mintegrator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprefix\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'md'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mreporter_frequency\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'minimized_coordinates' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "md = dict(\n",
+    "    coordinates=minimized_coordinates,\n",
+    "    integrator=integrator,\n",
+    "    prefix='md',\n",
+    "    reporter_frequency=1000,\n",
+    "    nonbonded_method=app.NoCutoff,\n",
+    "    nonbonded_cutoff=None,\n",
+    "    constraints=app.HBonds,\n",
+    "    temperature=300 * unit.kelvin,\n",
+    "    steps=10000)\n",
+    "md['output'] = 'generated/' + md['prefix'] + '.nc'\n",
+    "md['h5'] = 'generated/' + md['prefix'] + '.h5'\n",
+    "md['data'] = 'generated/' + md['prefix'] + '.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T02:58:53.185511Z",
+     "start_time": "2018-02-06T02:58:40.928769Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running OpenMM MD...\n",
+      "MD completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulation.context.setVelocitiesToTemperature(md['temperature'] * unit.kelvin)\n",
+    "# reporter = NetCDFReporter(md['output'], md['reporter_frequency'], \n",
+    "#                          cell=True)\n",
+    "# simulation.reporters.append(reporter)\n",
+    "\n",
+    "if not os.path.exists(md['h5']):\n",
+    "    simulation.reporters.append(mdtraj.reporters.HDF5Reporter(md['h5'], 1000))\n",
+    "\n",
+    "simulation.reporters.append(\n",
+    "    app.StateDataReporter(\n",
+    "        md['data'],\n",
+    "        md['reporter_frequency'],\n",
+    "        step=True,\n",
+    "        potentialEnergy=True,\n",
+    "        temperature=True,\n",
+    "        density=True))\n",
+    "\n",
+    "print('Running OpenMM MD...')\n",
+    "simulation.step(md['steps'])\n",
+    "print('MD completed.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T03:34:55.312469Z",
+     "start_time": "2018-02-06T03:34:54.730838Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af5584c08b5246fc92730c5a152cd2aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a15fc26b1b142e48e11d05c9ed7cafd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import nglview as nv\n",
+    "from IPython import display\n",
+    "\n",
+    "trajectory = mdtraj.load('generated/md.h5', 'r')\n",
+    "view = nv.show_mdtraj(trajectory, gui=True)\n",
+    "view"
    ]
   },
   {
@@ -1448,7 +1598,8 @@
     "ExecuteTime": {
      "end_time": "2018-02-06T00:56:07.490842Z",
      "start_time": "2018-02-06T00:56:07.477580Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
