--- a/smiles-to-prmtop.ipynb
+++ b/smiles-to-prmtop.ipynb
@@ -263,6 +263,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-06T06:15:49.277617Z",
+     "start_time": "2018-02-06T06:15:49.273930Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Topology; 239 chains, 239 residues, 3015 atoms, 2872 bonds>"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fixer.topology"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
