Adds function to extract host `mol2` from solvated PDB by mask

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-10T19:40:42.893103Z",
-     "start_time": "2018-02-10T19:40:42.859674Z"
+     "end_time": "2018-02-12T20:31:48.665773Z",
+     "start_time": "2018-02-12T20:31:48.627173Z"
     }
    },
    "outputs": [
@@ -43,7 +43,9 @@
     "\n",
     "from utils import create_pdb_with_conect, prune_conect\n",
     "from utils import split_topology, create_host_guest_topology\n",
-    "from utils import load_mol2, check_unique_atom_names"
+    "from utils import create_host_mol2\n",
+    "from utils import load_mol2, check_unique_atom_names\n",
+    "from utils import extract_water_and_ions, create_water_and_ions_parameters"
    ]
   },
   {
@@ -133,6 +135,91 @@
    "outputs": [],
    "source": [
     "# Need to find a way to write or get a fully polymerized host `mol2` file to continue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-12T20:19:53.347463Z",
+     "start_time": "2018-02-12T20:19:53.270504Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MOL2 file written by cpptraj.\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_host_mol2('generated/a-bam-p/full.pdb', 'original/a-bam-p/full.topo', 'MGO', 'generated/a-bam-p/MGO.mol2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-12T20:20:08.756726Z",
+     "start_time": "2018-02-12T20:20:08.725296Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "126 atoms in structure, 126 unique atom names.\n",
+      "17 atoms in structure, 17 unique atom names.\n"
+     ]
+    }
+   ],
+   "source": [
+    "host = load_mol2(filename='generated/a-bam-p/MGO.mol2', \n",
+    "                 name='MGO', \n",
+    "                 add_tripos=True)\n",
+    "guest = load_mol2(filename='original/a-bam-p/bam.mol2', \n",
+    "                  name='BAM', \n",
+    "                  add_tripos=False)\n",
+    "check_unique_atom_names(host)\n",
+    "check_unique_atom_names(guest)\n",
+    "molecules = [host, guest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-12T20:20:35.668018Z",
+     "start_time": "2018-02-12T20:20:35.011688Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ff = ForceField('forcefield/smirnoff99Frosst.ffxml') \n",
+    "system = ff.createSystem(hg_topology.topology, molecules,\n",
+    "                         nonbondedCutoff=1.1*unit.nanometer, \n",
+    "                         ewaldErrorTolerance=1e-4\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-12T20:30:49.766010Z",
+     "start_time": "2018-02-12T20:30:49.606885Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "hg_structure = pmd.openmm.topsystem.load_topology(hg_topology.topology, system, hg_topology.positions)"
    ]
   },
   {
